<resources>
    <string name="app_name">StudyPlanner</string>

    <!-- SALVATORE -->
    <string name="title_calendar_fragment">CALENDARIO DIDATTICO</string>
    <string name="nomeUtente">  | Inserisci Nome Utente</string>
    <string name="Password">Inserisci Password</string>
    <string name="testoCheckBoxRicordami">Ricordami</string>
    <string name="testoPassDim"> Hai dimenticato la password?</string>
    <string name="tastoLogin">Login</string>
    <string name="textNonAncoraReg">Non sei ancora registrato?</string>
    <string name="textRegistrazione">Registrati subito!</string>
    <string name="nomeApp">Study Planner</string>
    <string name="title_recupera_pass">RECUPERO PASSWORD</string>
    <string name="subtitle_recupera_pass">Dimostra di essere il proprietario di questo account</string>
    <string name="title_domanda">Rispondi alla tua domanda di sicurezza</string>
    <string name="risposta">Inserisci la risposta</string>
    <string name="button_conferma">CONFERMA</string>
    <string name="hint_nomeUtente">Inserisci il nome utente</string>
    <string name="domanda">Inserisci la domanda di sicurezza</string>
    <string name="title_registrazione">REGISTRA ACCOUNT</string>
    <string name="compilaCampi">Compila i seguenti campi per creare il tuo account personale</string>
    <string name="Username">Nome Utente</string>
    <string name="newPass">Password</string>
    <string name="confNewPass">Conferma Password</string>
    <string name="University">Università</string>
    <string name="corso">Corso/Classe</string>
    <string name="scegliDomSic">Scegli una domanda di sicurezza</string>
    <string name="CreateAcc">CREA ACCOUNT</string>
    <string name="scegliCorso">Scegli il corso di studi</string>
    <string name="scegliVoto">Seleziona il voto</string>
    <string name="rispSic">Inserisci la risposta di sicurezza</string>

    <string name="AddExam">AGGIUNGI ESAME</string>
    <string name="NomeEsame">Nome esame</string>
    <string name="ScegliNome">Scegli il nome della materia</string>
    <string name="Type">Tipo</string>
    <string name="NameEsame">Nome esame</string>
    <string name="InserisciNome">Inserisci nome </string>
    <string name="Date">Data </string>
    <string name="Cfu">Cfu</string>
    <string name="InserisciDate">Data esame</string>
    <string name="NameBook">Nome Libro </string>
    <string name="InserisciNameBook">Nome del libro </string>
    <string name="totPage">Totale pagine</string>
    <string name="InsertPage">Pagine</string>
    <string name="Arguments">Argomenti</string>

    <string name="titleProfile">PROFILO</string>
    <string name="descriptionProfile">Visualizza in questa schermata le informazioni relative al tuo Profilo. L\'app ti permetterà, se necessario di modificarle. </string>
    <string name="Name">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="universita">Università</string>
    <string name="corso_studi">Corso di studi</string>
    <string name="button_logout">LOGOUT</string>
    <string name="Account">Account</string>
    <string name="textPass">Password</string>
    <string name="modCredenziali">Modifica Credenziali</string>
    <string name="titleRoutine">Routine di studio</string>
    <string name="Monday">Lun</string>
    <string name="Tuesday">Mar</string>
    <string name="Wednesday">Mer</string>
    <string name="Thursday">Gio</string>
    <string name="Friday">Ven</string>
    <string name="Saturday">Sab</string>
    <string name="Sunday">Dom</string>
    <string name="orariStudio">8-13</string>
    <string name="orariStudio2">15-18</string>
    <string name="SubTitle">Pianifica al meglio la tua settimana di studio grazie a StudyPlanner!</string>
    <string name="insName">Inserisci nome</string>
    <string name="insSurname">Inserisci cognome</string>

    <string name="TitleLegend">Legenda</string>
    <string name="DescriptionLegend">Nel riquadro sottostante trovi la tua routine di studio, che puoi modificare a seconda delle tue esigenze. Per ogni giorno della settimana puoi impostare l\'icona del libro  altrimenti cliccando su di essa comparirà l\'icona della batteria. Inoltre, al di sotto delle icone trovi dei campi modificabili dove puoi inserire i tuoi orari di studio.  </string>
    <string name="iconBook">L\'icona del libro indica che è prevista una sessione di studio per quel giorno. Non mollare!</string>
    <string name="iconBatteryCharging">L\'icona della batteria indica che non è prevista nessuna sessione di studio , ma un giorno libero. Buon riposo!</string>
    <string name="ButtonBack">CAPITO</string>
    <string name="descriptionCalendar">Grazie al calendario StudyPlanner tieni traccia degli esami e delle scadenze. Clicca il bottone in basso per aggiungere un nuovo esame.</string>
    <string name="dateExame">Data Esame</string>
    <string name="cfu">Cfu:</string>
    <string name="nomeM">NOME MATERIA</string>
    <string name="vote">Voto:</string>
    <string name="descripionStatistiche">Visualizza il tuo percorso accademico.\nDai uno sguardo agli esami superati, la tua media e lo stato di avanzamento verso la laurea </string>

    <!-- MICHELE -->
    <string name="title_stat_fragment">CARRIERA ACCADEMICA</string>
    <string name="title_esami_superati">TOTALE CREDITI CONSEGUITI</string>
    <string name="title_compiti_svolti">COMPITI SVOLTI</string>
    <string name="title_media_aritmetica">MEDIA ARITMETICA</string>
    <string name="title_media_ponderata">MEDIA PONDERATA</string>
    <string name="title_media_pagine_studiate">MEDIA PAGINE STUDIATE</string>
    <string name="pagine_al_giorno">Al giorno</string>
    <string name="pagine_all_ora"> All\'ora</string>
    <string name="title_preparazione"> PREPARAZIONE</string>
    <string name="title_giorno_dell_esame">GIORNO DELL\'ESAME</string>
    <string name="title_giorni_rimanenti">GIORNI RIMANENTI</string>
    <string name="title_pagine_totali">PAGINE TOTALI</string>
    <string name="title_pagine_studiate">PAGINE STUDIATE</string>
    <string name="title_pagine_consigliate_giornalmente">PAGINE CONSIGLIATE OGGI</string>
    <string name="title_chip_Info">DETTAGLI</string>
    <string name="title_chip_Materiale">MATERIALE</string>
    <string name="nameDocente">Docente</string>
    <string name="title_argomenti">ARGOMENTI</string>
    <string name="title_titolo_libro">TITOLO LIBRO</string>
    <string name="errore_NoArgomenti">Nessun argomento da mostrare.</string>
    <string name="errore_ConnessioneServer">Nessuna connessione al server</string>
    <string name="title_dialog_timer">Inserisci nuovo timer</string>
    <string name="text_dialog_timer">Inserisci minuti</string>

    <!-- MICHELE -->
    <string name="tagArgumentsEventFragment">Data</string>

    <string name="title_exams_fragment">I TUOI ESAMI</string>
    <string name="description_exams_fragment">Elenco dei tuoi esami in programma.\nAggiungi un esame per iniziare, poi cliccalo per avere una panoramica completa.Tieni premuto sull\'icona dell esame per inserire il voto.</string>

    <string name="title_study_fragment">SESSIONE DI STUDIO</string>
    <string name="description_study_fragment">Qui puoi tenere traccia del tempo trascorso nello studio tramite la funzionalità timer.</string>
    <string name="description_study_fragment2">Alla fine della giornata registra le pagine studiate.</string>

    <string name="titleTimer">Timer Studio</string>
    <string name="TerminaSessioneButton">TERMINA SESSIONE</string>


    <string name="title_session_fragment">Inserisci quante pagine hai studiato oggi.</string>
    <string name="description_session_fragment">L\'app provvederà ad aggiornare le statistiche.</string>
    <string name="buttonConfirm">CONFERMA</string>
    <string name="buttonAggiungi">AGGIUNGI</string>

    <string name="erroreCampo">Inserire tutti i campi</string>
    <string name="erroreNomeUtente">Il nome utente deve contenere da 4 a 12 caratteri con almeno un numero e un carattere maiuscolo</string>
    <string name="errorePassword">La password deve contenere almeno un numero,un carattere maiuscolo e un carattere speciale</string>
    <string name="erroreNomeUtentePresente">Nome utente non disponibile</string>
    <string name="confermaRegistrazone">Account correttamente registrato</string>
    <string name="erroreConfPassword">Password e conferma password non corrispondono</string>

    <string name="default_notification_channel_id">channel_id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>