<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewModel.RegistrazioneFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleRegistrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_registrazione"
        android:textSize="30dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_border"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toBottomOf="@+id/titleRegistrazione" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="15dp"
            android:text="@string/compilaCampi"
            android:textColor="#2E2E2E"
            android:textSize="19dp" />

        <TextView
            android:id="@+id/mostraErrori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            />
        <!-- Qua metteremo eventuali errori per campi non compilati o compilati non correttamente -->


        <EditText
            android:id="@+id/insUtente"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_border"
            android:gravity="center_vertical"
            android:hint="@string/Username"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/insPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_border"
            android:gravity="center_vertical"
            android:hint="@string/newPass"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/ConfPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/confNewPass"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/University"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:hint="@string/corso"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                tools:ignore="Deprecated"
                android:editable="false"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/spinnerCorso"
                android:layout_weight="0"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="seleziona la domanda di sicurezza"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/textSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/scegliDomSic"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:editable="false"
                android:textSize="16dp"
                tools:ignore="Deprecated"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/spinnerDomanda"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="seleziona la domanda di sicurezza"
                android:textColor="@color/black"
                android:layout_weight="0"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/ButtonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateAcc"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:backgroundTint="#4CAF50"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>