<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="139dp"
        android:layout_marginVertical="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/logoapp_f" />


    <EditText
        android:id="@+id/EditTextNomeUtente"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/baseline_person_24"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:hint="@string/nomeUtente"
        android:textSize="21dp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/baseline_lock_24"
        app:drawableRightCompat="@drawable/baseline_remove_red_eye_24"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:clickable="true"
        android:paddingRight="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_vertical"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/EditTextNomeUtente"
        app:layout_constraintTop_toBottomOf="@id/EditTextNomeUtente" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
       android:background="@drawable/border_element"
        android:fontFamily="@font/montserrat_medium"
        android:paddingRight="15dp"
        android:text="@string/testoCheckBoxRicordami"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/EditTextNomeUtente"
        app:layout_constraintTop_toBottomOf="@+id/EditTextPassword" />

    <TextView
        android:id="@+id/textViewPasswordDimenticata"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginVertical="15dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/testoPassDim"
        android:paddingRight="5dp"
        android:textColor="#0037FF"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tastoLogin"
        android:fontFamily="@font/montserrat_medium"
        android:backgroundTint="#4CAF50"
        android:layout_marginTop="30dp"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPasswordDimenticata" />

    <TextView
        android:id="@+id/textNonAncoraReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNonAncoraReg"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/textRegistrazione"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/textRegistrazione"
        android:layout_marginTop="5dp"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNonAncoraReg"
        android:textColor="#0037FF"
        android:textStyle="bold"
        android:clickable="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/nomeApp"
        android:textSize="23dp"
        android:gravity="center"
        android:textStyle="italic"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="#06344C"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.13" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>