<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".viewModel.StatFragment">

    <TextView
        android:id="@+id/title_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/title_stat_fragment"
        android:textSize="24sp"
        android:textColor="@color/black"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textEsamiSuperati"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:text="@string/title_esami_superati"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/numEsamiSuperati"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_light"
                android:paddingLeft="20dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textCompitiSvolti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:paddingLeft="20dp"
                android:text="@string/title_compiti_svolti"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/numCompitiSvolti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_light"
                android:paddingLeft="20dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mediaAritmetica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:paddingLeft="20dp"
                android:text="@string/title_media_aritmetica"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/numMediaAritmetica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_light"
                android:paddingLeft="20dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mediaPonderata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:paddingLeft="20dp"
                android:text="@string/title_media_ponderata"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/numMediaPonderata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_light"
                android:paddingLeft="20dp"
                android:text="55"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mediaPagineStudiate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:paddingLeft="20dp"
                android:text="@string/title_media_pagine_studiate"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/numMediaPagineStudiateAlGiorno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:paddingLeft="20dp"
                        android:text="55"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:paddingLeft="5dp"
                        android:text="@string/pagine_al_giorno"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/numMediaPagineStudiateAlOra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:paddingLeft="20dp"
                        android:text="55"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_light"
                        android:paddingLeft="5dp"
                        android:paddingBottom="10dp"
                        android:text="@string/pagine_all_ora"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>